<resources>
    <string name="app_name">Crypto List</string>
    <string name="Cryptocurrencies">Список криптовалют</string>
    <string name="usd">USD</string>
    <string name="rub">RUB</string>
    <string name="error_message">Произошла какая-то ошибка :(</string>
    <string name="restart_message">Попробуем снова?</string>
    <string name="restart">Попробовать</string>
    <string name="description">Описание</string>
    <string name="Categories">Категории</string>
    <string name="error_loading">Произошла ошибка при загрузке</string>
</resources>